--- a/label/index.html
+++ b/label/index.html
@@ -4,15 +4,17 @@
   <meta name='viewport' content='initial-scale=1.0, maximum-scale=1.0'/>
   <title>Vector OSM</title>
   <link href='style.css' rel='stylesheet' />
-  <script src='http://api.tiles.mapbox.com/mapbox.js/v1.5.0/mapbox.js'></script>
   <link href='http://api.tiles.mapbox.com/mapbox.js/v1.5.0/mapbox.css' rel='stylesheet' />
-  <script src='http://d3js.org/d3.v3.min.js' charset='utf-8'></script>
-  <script src='js/tilejson.js'></script>
-  <script src='js/leaflet-hash.js'></script>
+  <link href='http://fonts.googleapis.com/css?family=Monoton' rel='stylesheet' type='text/css'>
+  
 </head>
 
 <body>
 <div id='map'></div>
+<script src='http://api.tiles.mapbox.com/mapbox.js/v1.5.0/mapbox.js'></script>
+<script src='http://d3js.org/d3.v3.min.js' charset='utf-8'></script>
+<script src='js/tilejson.js'></script>
+<script src='js/leaflet-hash.js'></script>
 <script type='text/javascript'>
 
   var roadSizes = {
@@ -59,9 +61,9 @@
   var dummy = new L.geoJson({'type': 'LineString','coordinates':[[0,0],[0,0]]})
 
   var map = L.mapbox.map('map','', {
-    center: [37.7837,-122.4166],
-    zoom: 16,
-    minZoom:14,
+    center: [44.475882500782824, -73.21207200118806],
+    zoom: 15,
+    minZoom:11,
     layers: [land, water, building, road, dummy,label]
   }).addControl(L.mapbox.geocoderControl('bobbysud.map-15wycltk'));
   
